# cmake-lib-template

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: WarningFlags.cmake
src/: CMakeLists.txt  libimpl.cpp
test/: CMakeLists.txt  testmylib.cpp
